Изменил файлы для регистрации и логина